Update authenticate template

--- a/one/templates/metronic/account/root.html
+++ b/one/templates/metronic/account/root.html
@@ -29,39 +29,7 @@
 	<!--begin::Body-->
 	<body id="kt_body" class="bg-body">
 		<!--begin::Main-->
-		<!--begin::Root-->
-		<div class="d-flex flex-column flex-root">
-			<!--begin::Authentication - Sign-in -->
-			<div class="d-flex flex-column flex-column-fluid bgi-position-y-bottom position-x-center bgi-no-repeat bgi-size-contain bgi-attachment-fixed" style="background-image: url({% static 'media/illustrations/sketchy-1/14.png' %}">
-
-        <!--begin::Content-->
-				<div class="d-flex flex-center flex-column flex-column-fluid p-10 pb-lg-20">
-					<!--begin::Logo-->
-					<a href="../../demo1/dist/index.html" class="mb-12">
-						<img alt="Logo" src="{% static 'media/logos/logo-1.svg' %}" class="h-40px" />
-					</a>
-					<!--end::Logo-->
-          {% block content %}
-
-          {% endblock content %}
-				</div>
-				<!--end::Content-->
-
-				<!--begin::Footer-->
-				<div class="d-flex flex-center flex-column-auto p-10">
-					<!--begin::Links-->
-					<div class="d-flex align-items-center fw-bold fs-6">
-						<a href="https://keenthemes.com" class="text-muted text-hover-primary px-2">About</a>
-						<a href="mailto:support@keenthemes.com" class="text-muted text-hover-primary px-2">Contact</a>
-						<a href="https://1.envato.market/EA4JP" class="text-muted text-hover-primary px-2">Contact Us</a>
-					</div>
-					<!--end::Links-->
-				</div>
-				<!--end::Footer-->
-			</div>
-			<!--end::Authentication - Sign-in-->
-		</div>
-		<!--end::Root-->
+		{% block content %}{% endblock content %}
 		<!--end::Main-->
 		<!--begin::Javascript-->
 		<!--begin::Global Javascript Bundle(used by all pages)-->
@@ -115,15 +83,3 @@
 	</body>
 	<!--end::Body-->
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
