--- a/one/templates/metronic/account/signup.html
+++ b/one/templates/metronic/account/signup.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends "account/base-col-2.html" %}
 
 {% load i18n %}
 {% load crispy_forms_tags %}
@@ -6,17 +6,257 @@
 {% block head_title %}{% translate "Signup" %}{% endblock %}
 
 {% block inner %}
-<h1>{% translate "Sign Up" %}</h1>
-
-<p>{% blocktranslate %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktranslate %}</p>
-
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form|crispy }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button class="btn btn-primary" type="submit">{% translate "Sign Up" %} &raquo;</button>
-</form>
+  <!--begin::Wrapper-->
+  <div class="w-lg-600px bg-body rounded shadow-sm p-10 p-lg-15 mx-auto">
+    <!--begin::Form-->
+    <form class="form w-100" novalidate="novalidate" id="kt_sign_up_form"
+        method="post" action="{% url 'account_signup' %}">
+      {% csrf_token %}
+      {% if redirect_field_value %}
+        <input type="hidden" name="{{ redirect_field_name }}"
+               value="{{ redirect_field_value }}"/>
+      {% endif %}
+      <!--begin::Heading-->
+      <div class="mb-10 text-center">
+        <!--begin::Title-->
+        <h1 class="text-dark mb-3">{% translate "Create an Account" %}</h1>
+        <!--end::Title-->
+        <!--begin::Link-->
+        <div class="text-gray-400 fw-bold fs-4">{% translate "Already have an account" %}?
+          <a href="{{ login_url }}"
+             class="link-primary fw-bolder">{% translate "Sign in here" %}</a></div>
+        <!--end::Link-->
+      </div>
+      <!--end::Heading-->
+      <!--begin::Action-->
+      <!--<button type="button"
+              class="btn btn-light-primary fw-bolder w-100 mb-10">
+        <img alt="Logo" src="assets/media/svg/brand-logos/google-icon.svg"
+             class="h-20px me-3"/>Sign in with Google
+      </button>-->
+      <!--end::Action-->
+      <!--begin::Separator-->
+      <!--<div class="d-flex align-items-center mb-10">
+        <div class="border-bottom border-gray-300 mw-50 w-100"></div>
+        <span class="fw-bold text-gray-400 fs-7 mx-2">OR</span>
+        <div class="border-bottom border-gray-300 mw-50 w-100"></div>
+      </div>-->
+      <!--end::Separator-->
+      <!--begin::Input group-->
+      <div class="fv-row mb-7">
+        <label class="form-label fw-bolder text-dark fs-6">{% translate "Email" %}</label>
+        <input class="form-control form-control-lg form-control-solid"
+               type="email" placeholder=""
+               name="email" autocomplete="off" id="id_email" />
+      </div>
+      <!--end::Input group-->
+      <!--begin::Input group-->
+      <div class="fv-row mb-7">
+        <label class="form-label fw-bolder text-dark fs-6">{% translate "Username" %}</label>
+        <input class="form-control form-control-lg form-control-solid"
+               type="text" placeholder=""
+               name="username" autocomplete="off" id="id_username"/>
+      </div>
+      <!--end::Input group-->
+      <!--begin::Input group-->
+      <div class="mb-10 fv-row" data-kt-password-meter="true">
+        <!--begin::Wrapper-->
+        <div class="mb-1">
+          <!--begin::Label-->
+          <label class="form-label fw-bolder text-dark fs-6">{% translate "Password" %}</label>
+          <!--end::Label-->
+          <!--begin::Input wrapper-->
+          <div class="position-relative mb-3">
+            <input class="form-control form-control-lg form-control-solid"
+                   type="password" placeholder="" name="password1"
+                   autocomplete="off" id="id_password1"/>
+            <span
+              class="btn btn-sm btn-icon position-absolute translate-middle top-50 end-0 me-n2"
+              data-kt-password-meter-control="visibility">
+            <i class="bi bi-eye-slash fs-2"></i>
+            <i class="bi bi-eye fs-2 d-none"></i>
+          </span>
+          </div>
+          <!--end::Input wrapper-->
+          <!--begin::Meter-->
+          <div class="d-flex align-items-center mb-3"
+               data-kt-password-meter-control="highlight">
+            <div
+              class="flex-grow-1 bg-secondary bg-active-success rounded h-5px me-2"></div>
+            <div
+              class="flex-grow-1 bg-secondary bg-active-success rounded h-5px me-2"></div>
+            <div
+              class="flex-grow-1 bg-secondary bg-active-success rounded h-5px me-2"></div>
+            <div
+              class="flex-grow-1 bg-secondary bg-active-success rounded h-5px"></div>
+          </div>
+          <!--end::Meter-->
+        </div>
+        <!--end::Wrapper-->
+        <!--begin::Hint-->
+        <div class="text-muted">{% blocktranslate %}Use 8 or more characters with a mix of letters,
+          numbers &amp; symbols.{% endblocktranslate %}
+        </div>
+        <!--end::Hint-->
+      </div>
+      <!--end::Input group=-->
+      <!--begin::Input group-->
+      <div class="fv-row mb-5">
+        <label class="form-label fw-bolder text-dark fs-6">{% translate "Confirm Password" %}</label>
+        <input class="form-control form-control-lg form-control-solid"
+               type="password" placeholder="" name="password2"
+               autocomplete="off" id="id_password2"/>
+      </div>
+      <!--end::Input group-->
+      <!--begin::Input group-->
+      <!--<div class="fv-row mb-10">
+        <label
+          class="form-check form-check-custom form-check-solid form-check-inline">
+          <input class="form-check-input" type="checkbox" name="toc"
+                 value="1"/>
+          <span class="form-check-label fw-bold text-gray-700 fs-6">I Agree
+        <a href="#" class="ms-1 link-primary">Terms and conditions</a>.</span>
+        </label>
+      </div>-->
+      <!--end::Input group-->
+      <!--begin::Actions-->
+      <div class="text-center">
+        <button type="button" id="kt_sign_up_submit"
+                class="btn btn-lg btn-primary">
+          <span class="indicator-label">{% translate "Submit" %}</span>
+          <span class="indicator-progress">{% translate "Please wait" %}...
+        <span
+          class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
+        </button>
+      </div>
+      <!--end::Actions-->
+    </form>
+    <!--end::Form-->
+  </div>
+  <!--end::Wrapper-->
 
 {% endblock %}
+
+{% block javascript %}
+  <script>
+    // Elements
+    var form = document.querySelector('#kt_sign_up_form');
+    var submitButton = document.querySelector('#kt_sign_up_submit');
+    var passwordMeter = KTPasswordMeter.getInstance(form.querySelector('[data-kt-password-meter="true"]'));
+
+    // Init form validation rules. For more info check the FormValidation plugin's official documentation:https://formvalidation.io/
+    var validator = FormValidation.formValidation(
+      form,
+      {
+        fields: {
+          'username': {
+            validators: {
+              notEmpty: {
+                message: '{% translate "Username is required" %}'
+              }
+            }
+          },
+          'email': {
+            validators: {
+              notEmpty: {
+                message: '{% translate "Email address is required" %}'
+              },
+              emailAddress: {
+                message: '{% translate "The value is not a valid email address" %}'
+              }
+            }
+          },
+          'password1': {
+            validators: {
+              notEmpty: {
+                message: '{% translate "The password is required" %}'
+              },
+              callback: {
+                message: '{% translate "Please enter valid password" %}',
+                callback: function (input) {
+                  if (input.value.length > 0) {
+                    return validatePassword();
+                  }
+                }
+              }
+            }
+          },
+          'password2': {
+            validators: {
+              notEmpty: {
+                message: '{% translate "The password confirmation is required" %}'
+              },
+              identical: {
+                compare: function () {
+                  return form.querySelector('[name="password1"]').value;
+                },
+                message: '{% translate "The password and its confirm are not the same" %}'
+              }
+            }
+          }
+          //'toc': {
+          //  validators: {
+          //    notEmpty: {
+          //      message: 'You must accept the terms and conditions" %}'
+          //    }
+          //  }
+          //}
+        },
+        plugins: {
+          trigger: new FormValidation.plugins.Trigger({
+            event: {
+              password: false
+            }
+          }),
+          bootstrap: new FormValidation.plugins.Bootstrap5({
+            rowSelector: '.fv-row',
+            eleInvalidClass: '',
+            eleValidClass: ''
+          })
+        }
+      }
+    );
+
+    // Handle form submit
+    submitButton.addEventListener('click', function (e) {
+      e.preventDefault();
+
+      validator.revalidateField('password1');
+
+      validator.validate().then(function (status) {
+        if (status == 'Valid') {
+          // Show loading indication
+          submitButton.setAttribute('data-kt-indicator', 'on');
+
+          // Disable button to avoid multiple click
+          submitButton.disabled = true;
+
+          form.submit();
+        } else {
+          // Show error popup. For more info check the plugin's official documentation: https://sweetalert2.github.io/
+          Swal.fire({
+            text: "{% translate 'Sorry, looks like there are some errors detected, please try again' %}.",
+            icon: "error",
+            buttonsStyling: false,
+            confirmButtonText: "{% translate 'Ok, got it' %}!",
+            customClass: {
+              confirmButton: "btn btn-primary"
+            }
+          });
+        }
+      });
+    });
+
+    // Handle password input
+    form.querySelector('input[name="password1"]').addEventListener('input', function () {
+      if (this.value.length > 0) {
+        validator.updateFieldStatus('password1', 'NotValidated');
+      }
+    });
+
+    // Password input validation
+    var validatePassword = function () {
+      return (passwordMeter.getScore() === 100);
+    }
+  </script>
+{% endblock javascript %}
