--- a/one/templates/metronic/account/email_confirm.html
+++ b/one/templates/metronic/account/email_confirm.html
@@ -1,31 +1,40 @@
-{% extends "account/base.html" %}
+{% extends "account/base-col-1.html" %}
 
-{% load i18n %}
+{% load static i18n %}
 {% load account %}
 
-{% block head_title %}{% translate "Confirm E-mail Address" %}{% endblock %}
-
+{% block head_title %}{% translate "Account Inactive" %}{% endblock %}
 
 {% block inner %}
-<h1>{% translate "Confirm E-mail Address" %}</h1>
+  <!--begin::Wrapper-->
+  <div class="pt-lg-10 mb-10">
+    <!--begin::Logo-->
+    <h1 class="fw-bolder fs-2qx text-gray-800 mb-7">{% translate "Verify Your Email" %}</h1>
+    <!--end::Logo-->
+    {% if confirmation %}
+    {% user_display confirmation.email_address.user as user_display %}
+    <!--begin::Message-->
+    <div class="fs-3 fw-bold text-muted mb-10">{% blocktranslate with confirmation.email_address.email as email %}We have sent an email to
+    <a href="mailto:{{ email }}" class="link-primary fw-bolder">{{ email }}</a>
+    <br />please follow a link to verify your email.{% endblocktranslate %}</div>
+    <!--end::Message-->
+    <!--begin::Action-->
+    <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+      {% csrf_token %}
+      <div class="text-center mb-10">
+        <button class="btn btn-lg btn-primary fw-bolder" type="submit">{% translate 'Confirm' %}</button>
+      </div>
+    </form>
 
-{% if confirmation %}
-
-{% user_display confirmation.email_address.user as user_display %}
-
-<p>{% blocktranslate with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktranslate %}</p>
-
-<form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
-{% csrf_token %}
-    <button class="btn btn-primary" type="submit">{% translate 'Confirm' %}</button>
-</form>
-
-{% else %}
-
-{% url 'account_email' as email_url %}
-
-<p>{% blocktranslate %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktranslate %}</p>
-
-{% endif %}
+    <!--end::Action-->
+    {% else %}
+      {% url 'account_email' as email_url %}
+      <!--begin::Message-->
+      <div class="fs-3 fw-bold text-muted mb-10">{% blocktranslate %}This e-mail confirmation link expired or is invalid. Please
+      <a href="{{ email_url }}" class="link-primary fw-bolder">issue a new e-mail confirmation request</a>.{% endblocktranslate %}</div>
+      <!--end::Message-->
+    {% endif %}
+  </div>
+  <!--end::Wrapper-->
 
 {% endblock %}
