--- a/one/templates/metronic/account/login.html
+++ b/one/templates/metronic/account/login.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends "account/base-col-2.html" %}
 
 {% load static i18n %}
 {% load account socialaccount %}
@@ -165,12 +165,6 @@
 
           // Disable button to avoid multiple click
           submitButton.disabled = true;
-
-          // Hide loading indication
-          submitButton.removeAttribute('data-kt-indicator');
-
-          // Enable button
-          submitButton.disabled = false;
 
           form.submit();
 
