--- a/one/templates/metronic/account/password_reset_done.html
+++ b/one/templates/metronic/account/password_reset_done.html
@@ -1,4 +1,4 @@
-{% extends "account/base.html" %}
+{% extends "account/base-col-1.html" %}
 
 {% load i18n %}
 {% load account %}
@@ -6,11 +6,27 @@
 {% block head_title %}{% translate "Password Reset" %}{% endblock %}
 
 {% block inner %}
-    <h1>{% translate "Password Reset" %}</h1>
-
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-
-    <p>{% blocktranslate %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktranslate %}</p>
+  <!--begin::Wrapper-->
+  <div class="w-lg-500px bg-body rounded shadow-sm p-10 p-lg-15 mx-auto">
+    <!--begin::Form-->
+    <form class="form w-100" novalidate="novalidate"
+          id="kt_password_reset_form">
+      <!--begin::Heading-->
+      <div class="text-center mb-10">
+        <!--begin::Title-->
+        <h1 class="text-dark mb-3">{% translate "Password Reset" %}</h1>
+        <!--end::Title-->
+        {% if user.is_authenticated %}
+          {% include "account/snippets/already_logged_in.html" %}
+        {% endif %}
+        <!--begin::Link-->
+        <div class="text-gray-400 fw-bold fs-4">{% blocktranslate %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktranslate %}
+        </div>
+        <!--end::Link-->
+      </div>
+      <!--begin::Heading-->
+    </form>
+    <!--end::Form-->
+  </div>
+  <!--end::Wrapper-->
 {% endblock %}
