Add landing, error page

--- a/one/templates/metronic/500.html
+++ b/one/templates/metronic/500.html
@@ -1,11 +1,27 @@
-{% extends "base.html" %}
+{% extends "account/base-col-1.html" %}
 
-{% block title %}Server Error{% endblock %}
+{% load static i18n %}
 
-{% block content %}
-<h1>Ooops!!! 500</h1>
+{% block head_title %}{% translate "Server Error" %}{% endblock %}
 
-<h3>Looks like something went wrong!</h3>
-
-<p>We track these errors automatically, but if the problem persists feel free to contact us. In the meantime, try refreshing.</p>
-{% endblock content %}
+{% block inner %}
+  <!--begin::Wrapper-->
+  <div class="pt-lg-10 mb-10">
+    <!--begin::Logo-->
+    <h1
+      class="fw-bolder fs-2qx text-gray-800 mb-10">{% translate "Looks like something went wrong!" %}</h1>
+    <!--end::Logo-->
+    <!--begin::Message-->
+    <div class="fw-bold fs-3 text-muted mb-15">{% blocktranslate %}We track
+      these errors automatically, but if the problem persists feel free to
+      contact us. In the meantime, try refreshing.{% endblocktranslate %}</div>
+    <!--end::Message-->
+    <!--begin::Action-->
+    <div class="text-center">
+      <a href="/"
+         class="btn btn-lg btn-primary fw-bolder">{% translate "Go to homepage" %}</a>
+    </div>
+    <!--end::Action-->
+  </div>
+  <!--end::Wrapper-->
+{% endblock inner %}
