--- a/one/templates/metronic/403.html
+++ b/one/templates/metronic/403.html
@@ -1,9 +1,25 @@
-{% extends "base.html" %}
+{% extends "account/base-col-1.html" %}
 
-{% block title %}Forbidden (403){% endblock %}
+{% load static i18n %}
 
-{% block content %}
-<h1>Forbidden (403)</h1>
+{% block head_title %}{% translate "Forbidden (403)" %}{% endblock %}
 
-<p>{% if exception %}{{ exception }}{% else %}You're not allowed to access this page.{% endif %}</p>
-{% endblock content %}
+{% block inner %}
+  <!--begin::Wrapper-->
+  <div class="pt-lg-10 mb-10">
+    <!--begin::Logo-->
+    <h1
+      class="fw-bolder fs-2qx text-gray-800 mb-10">{% translate "Forbidden (403)" %}</h1>
+    <!--end::Logo-->
+    <!--begin::Message-->
+    <div class="fw-bold fs-3 text-muted mb-15">{% if exception %}{{ exception }}{% else %}{% blocktranslate %}You're not allowed to access this page.{% endblocktranslate %}{% endif %}</div>
+    <!--end::Message-->
+    <!--begin::Action-->
+    <div class="text-center">
+      <a href="/"
+         class="btn btn-lg btn-primary fw-bolder">{% translate "Go to homepage" %}</a>
+    </div>
+    <!--end::Action-->
+  </div>
+  <!--end::Wrapper-->
+{% endblock inner %}
