--- a/one/templates/metronic/layout/topbar/partials/_user-menu.html
+++ b/one/templates/metronic/layout/topbar/partials/_user-menu.html
@@ -15,6 +15,8 @@
       <div class="d-flex flex-column">
         <div class="fw-bolder d-flex align-items-center fs-5">
           {{ request.user.display_name_html|safe }}
+        </div>
+        <div class="fw-bolder d-flex align-items-center fs-5">
           {{ request.user.display_level_html|safe }}
         </div>
         <a href="#" class="fw-bold text-muted text-hover-primary fs-7">
@@ -29,7 +31,8 @@
   <!--end::Menu separator-->
   <!--begin::Menu item-->
   <div class="menu-item px-5">
-    <a href="?page=account/overview" class="menu-link px-5">My Profile</a>
+    <a href="{% url 'users:detail' request.user.username %}"
+       class="menu-link px-5">{% translate "My Profile" %}</a>
   </div>
   <!--end::Menu item-->
   <!--begin::Menu item-->
@@ -46,52 +49,52 @@
   <!--begin::Menu item-->
   <!--<div class="menu-item px-5" data-kt-menu-trigger="hover"
        data-kt-menu-placement="left-start">-->
-    <!--<a href="#" class="menu-link px-5">
-      <span class="menu-title">My Subscription</span>
-      <span class="menu-arrow"></span>
-    </a>-->
-    <!--begin::Menu sub-->
-    <!--<div class="menu-sub menu-sub-dropdown w-175px py-4">-->
-      <!--begin::Menu item-->
-      <!--<div class="menu-item px-3">
-        <a href="?page=account/referrals" class="menu-link px-5">Referrals</a>
-      </div>-->
-      <!--end::Menu item-->
-      <!--begin::Menu item-->
-      <!--<div class="menu-item px-3">
-        <a href="?page=account/billing" class="menu-link px-5">Billing</a>
-      </div>-->
-      <!--end::Menu item-->
-      <!--begin::Menu item-->
-      <!--<div class="menu-item px-3">
-        <a href="?page=account/statements" class="menu-link px-5">Payments</a>
-      </div>-->
-      <!--end::Menu item-->
-      <!--begin::Menu item-->
-      <!--<div class="menu-item px-3">
-        <a href="?page=account/statements"
-           class="menu-link d-flex flex-stack px-5">Statements
-          <i class="fas fa-exclamation-circle ms-2 fs-7"
-             data-bs-toggle="tooltip" title="View your statements"></i></a>
-      </div>-->
-      <!--end::Menu item-->
-      <!--begin::Menu separator-->
-      <!--<div class="separator my-2"></div>-->
-      <!--end::Menu separator-->
-      <!--begin::Menu item-->
-      <!--<div class="menu-item px-3">
-        <div class="menu-content px-3">
-          <label
-            class="form-check form-switch form-check-custom form-check-solid">
-            <input class="form-check-input w-30px h-20px" type="checkbox"
-                   value="1" checked="checked" name="notifications"/>
-            <span class="form-check-label text-muted fs-7">Notifications</span>
-          </label>
-        </div>
-      </div>-->
-      <!--end::Menu item-->
-    <!--</div>-->
-    <!--end::Menu sub-->
+  <!--<a href="#" class="menu-link px-5">
+    <span class="menu-title">My Subscription</span>
+    <span class="menu-arrow"></span>
+  </a>-->
+  <!--begin::Menu sub-->
+  <!--<div class="menu-sub menu-sub-dropdown w-175px py-4">-->
+  <!--begin::Menu item-->
+  <!--<div class="menu-item px-3">
+    <a href="?page=account/referrals" class="menu-link px-5">Referrals</a>
+  </div>-->
+  <!--end::Menu item-->
+  <!--begin::Menu item-->
+  <!--<div class="menu-item px-3">
+    <a href="?page=account/billing" class="menu-link px-5">Billing</a>
+  </div>-->
+  <!--end::Menu item-->
+  <!--begin::Menu item-->
+  <!--<div class="menu-item px-3">
+    <a href="?page=account/statements" class="menu-link px-5">Payments</a>
+  </div>-->
+  <!--end::Menu item-->
+  <!--begin::Menu item-->
+  <!--<div class="menu-item px-3">
+    <a href="?page=account/statements"
+       class="menu-link d-flex flex-stack px-5">Statements
+      <i class="fas fa-exclamation-circle ms-2 fs-7"
+         data-bs-toggle="tooltip" title="View your statements"></i></a>
+  </div>-->
+  <!--end::Menu item-->
+  <!--begin::Menu separator-->
+  <!--<div class="separator my-2"></div>-->
+  <!--end::Menu separator-->
+  <!--begin::Menu item-->
+  <!--<div class="menu-item px-3">
+    <div class="menu-content px-3">
+      <label
+        class="form-check form-switch form-check-custom form-check-solid">
+        <input class="form-check-input w-30px h-20px" type="checkbox"
+               value="1" checked="checked" name="notifications"/>
+        <span class="form-check-label text-muted fs-7">Notifications</span>
+      </label>
+    </div>
+  </div>-->
+  <!--end::Menu item-->
+  <!--</div>-->
+  <!--end::Menu sub-->
   <!--</div>-->
   <!--end::Menu item-->
   <!--begin::Menu item-->
@@ -106,86 +109,96 @@
   <div class="menu-item px-5" data-kt-menu-trigger="hover"
        data-kt-menu-placement="left-start">
     <a href="#" class="menu-link px-5">
-														<span class="menu-title position-relative">Language
-														<span
-                              class="fs-8 rounded bg-light px-3 py-2 position-absolute translate-middle-y top-50 end-0">English
-														<img class="w-15px h-15px rounded-1 ms-2"
-                                 src="{% static 'media/flags/united-states.svg' %}"
-                                 alt=""/></span></span>
+      <span class="menu-title position-relative">{% translate 'Language' %}
+      {% get_current_language as LANGUAGE_CODE %}
+      {% if LANGUAGE_CODE == 'en' %}
+      <span
+        class="fs-8 rounded bg-light px-3 py-2 position-absolute translate-middle-y top-50 end-0">{% translate 'English' %}
+      <img class="w-15px h-15px rounded-1 ms-2"
+           src="{% static 'media/flags/united-states.svg' %}"
+           alt=""/></span></span>
+      {% else %}
+        <span
+          class="fs-8 rounded bg-light px-3 py-2 position-absolute translate-middle-y top-50 end-0">{% translate 'Vietnamese' %}
+        <img class="w-15px h-15px rounded-1 ms-2"
+             src="{% static 'media/flags/vietnam.svg' %}"
+             alt=""/></span></span>
+      {% endif %}
     </a>
     <!--begin::Menu sub-->
     <div class="menu-sub menu-sub-dropdown w-175px py-4">
       <!--begin::Menu item-->
       <div class="menu-item px-3">
-        <a href="?page=account/settings" class="menu-link d-flex px-5 active">
-															<span class="symbol symbol-20px me-4">
-																<img class="rounded-1"
-                                     src="{% static 'media/flags/united-states.svg' %}"
-                                     alt=""/>
-															</span>English</a>
+        <a href="#" class="menu-link d-flex px-5 active"
+        onclick="submitChangeLanguageForm('en');">
+          <span class="symbol symbol-20px me-4">
+            <img class="rounded-1"
+                 src="{% static 'media/flags/united-states.svg' %}"
+                 alt=""/>
+          </span>{% translate 'English' %}</a>
       </div>
       <!--end::Menu item-->
       <!--begin::Menu item-->
       <div class="menu-item px-3">
-        <a href="?page=account/settings" class="menu-link d-flex px-5">
-															<span class="symbol symbol-20px me-4">
-																<img class="rounded-1"
-                                     src="{% static 'media/flags/spain.svg' %}"
-                                     alt=""/>
-															</span>Spanish</a>
+        <a href="#" class="menu-link d-flex px-5"
+        onclick="submitChangeLanguageForm('vi');">
+          <span class="symbol symbol-20px me-4">
+            <img class="rounded-1"
+                 src="{% static 'media/flags/vietnam.svg' %}"
+                 alt=""/>
+          </span>{% translate 'Vietnamese' %}</a>
       </div>
       <!--end::Menu item-->
       <!--begin::Menu item-->
-      <div class="menu-item px-3">
+      <!--<div class="menu-item px-3">
         <a href="?page=account/settings" class="menu-link d-flex px-5">
 															<span class="symbol symbol-20px me-4">
 																<img class="rounded-1"
                                      src="{% static 'media/flags/germany.svg' %}"
                                      alt=""/>
 															</span>German</a>
-      </div>
+      </div>-->
       <!--end::Menu item-->
       <!--begin::Menu item-->
-      <div class="menu-item px-3">
+      <!--<div class="menu-item px-3">
         <a href="?page=account/settings" class="menu-link d-flex px-5">
 															<span class="symbol symbol-20px me-4">
 																<img class="rounded-1"
                                      src="{% static 'media/flags/japan.svg' %}"
                                      alt=""/>
 															</span>Japanese</a>
-      </div>
+      </div>-->
       <!--end::Menu item-->
       <!--begin::Menu item-->
-      <div class="menu-item px-3">
+      <!--<div class="menu-item px-3">
         <a href="?page=account/settings" class="menu-link d-flex px-5">
 															<span class="symbol symbol-20px me-4">
 																<img class="rounded-1"
                                      src="{% static 'media/flags/france.svg' %}"
                                      alt=""/>
 															</span>French</a>
-      </div>
+      </div>-->
       <!--end::Menu item-->
     </div>
     <!--end::Menu sub-->
   </div>
   <!--end::Menu item-->
   <!--begin::Menu item-->
-  <div class="menu-item px-5 my-1">
+  <!--<div class="menu-item px-5 my-1">
     <a href="?page=account/settings" class="menu-link px-5">Account
       Settings</a>
-  </div>
+  </div>-->
   <!--end::Menu item-->
   <!--begin::Menu item-->
   <div class="menu-item px-5">
-    <a href="?page=authentication/flows/basic/sign-in" class="menu-link px-5">Sign
-      Out</a>
+    <a href="{% url 'account_logout' %}" class="menu-link px-5">{% translate 'Sign Out' %}</a>
   </div>
   <!--end::Menu item-->
   <!--begin::Menu separator-->
-  <div class="separator my-2"></div>
+  <!--<div class="separator my-2"></div>-->
   <!--end::Menu separator-->
   <!--begin::Menu item-->
-  <div class="menu-item px-5">
+  <!--<div class="menu-item px-5">
     <div class="menu-content px-5">
       <label
         class="form-check form-switch form-check-custom form-check-solid pulse pulse-success"
@@ -197,7 +210,7 @@
         <span class="form-check-label text-gray-600 fs-7">Dark Mode</span>
       </label>
     </div>
-  </div>
+  </div>-->
   <!--end::Menu item-->
 </div>
 <!--end::Menu-->
