--- a/one/templates/base.html
+++ b/one/templates/base.html
@@ -102,7 +102,7 @@
     {% block inline_javascript %}
     {% comment %}
     Script tags with only code, no src (defer by default). To run
-    with a "defer" so that you run run inline code:
+    with a "defer" so that you run inline code:
     <script>
       window.addEventListener('DOMContentLoaded', () => {/* Run whatever you want */});
     </script>
