Update Base and custom metronic

--- a/one/templates/metronic/layout/header/_base.html
+++ b/one/templates/metronic/layout/header/_base.html
@@ -39,17 +39,16 @@
       class="d-flex align-items-stretch justify-content-between flex-lg-grow-1">
       <!--begin::Navbar-->
       <div class="d-flex align-items-stretch" id="kt_header_nav">
-
         <!--layout-partial:layout/header/_menu.html-->
 
+        <!--layout-partial:layout/page-title/_default.html-->
+        {% include 'layout/page-title/_default.html' %}
       </div>
       <!--end::Navbar-->
       <!--begin::Topbar-->
       <div class="d-flex align-items-stretch flex-shrink-0">
-
         <!--layout-partial:layout/topbar/_base.html-->
         {% include 'layout/topbar/_base.html' %}
-
       </div>
       <!--end::Topbar-->
     </div>
