--- a/one/templates/metronic/layout/page-title/_default.html
+++ b/one/templates/metronic/layout/page-title/_default.html
@@ -1,14 +1,38 @@
-
-								<!--begin::Page title-->
-								<div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
-									<!--begin::Title-->
-									<h1 class="d-flex align-items-center text-dark fw-bolder fs-3 my-1">Dashboard
-									<!--begin::Separator-->
-									<span class="h-20px border-gray-200 border-start ms-3 mx-2"></span>
-									<!--end::Separator-->
-									<!--begin::Description-->
-									<small class="text-muted fs-7 fw-bold my-1 ms-1">#XRS-45670</small>
-									<!--end::Description--></h1>
-									<!--end::Title-->
-								</div>
-								<!--end::Page title-->
+{% load static i18n %}
+<div data-kt-swapper="true" data-kt-swapper-mode="prepend"
+     data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_header_nav'}"
+     class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
+  <!--begin::Title-->
+  <h1 class="d-flex align-items-center text-dark fw-bolder fs-3 my-1">No
+    Toolbar</h1>
+  <!--end::Title-->
+  <!--begin::Separator-->
+  <span class="h-20px border-gray-300 border-start mx-4"></span>
+  <!--end::Separator-->
+  <!--begin::Breadcrumb-->
+  <ul class="breadcrumb breadcrumb-separatorless fw-bold fs-7 my-1">
+    <!--begin::Item-->
+    <li class="breadcrumb-item text-muted">
+      <a href="/metronic8/demo1/../demo1/index.html"
+         class="text-muted text-hover-primary">Home</a>
+    </li>
+    <!--end::Item-->
+    <!--begin::Item-->
+    <li class="breadcrumb-item">
+      <span class="bullet bg-gray-300 w-5px h-2px"></span>
+    </li>
+    <!--end::Item-->
+    <!--begin::Item-->
+    <li class="breadcrumb-item text-muted">Toolbars</li>
+    <!--end::Item-->
+    <!--begin::Item-->
+    <li class="breadcrumb-item">
+      <span class="bullet bg-gray-300 w-5px h-2px"></span>
+    </li>
+    <!--end::Item-->
+    <!--begin::Item-->
+    <li class="breadcrumb-item text-dark">No Toolbar</li>
+    <!--end::Item-->
+  </ul>
+  <!--end::Breadcrumb-->
+</div>
