--- a/one/templates/metronic/root.html
+++ b/one/templates/metronic/root.html
@@ -115,7 +115,7 @@
 								<!--end::Menu wrapper-->
 								<!--begin::Toolbar-->
 								<div class="flex-equal text-end ms-1">
-									<a href="../../demo1/dist/authentication/flows/basic/sign-in.html" class="btn btn-success">Sign In</a>
+									<a href="{% url 'account_login' %}" class="btn btn-success">Sign In</a>
 								</div>
 								<!--end::Toolbar-->
 							</div>
