--- a/one/templates/metronic/layout/topbar/partials/_user-menu.html
+++ b/one/templates/metronic/layout/topbar/partials/_user-menu.html
@@ -8,7 +8,7 @@
     <div class="menu-content d-flex align-items-center px-3">
       <!--begin::Avatar-->
       <div class="symbol symbol-50px me-5">
-        <img alt="Logo" src="{% static 'media/avatars/150-26.jpg' %}"/>
+        <img alt="Logo" src="{% if user.avatar %}{{ user.avatar.url }}{% else %}{% static 'media/svg/avatars/blank.svg' %}{% endif %}"/>
       </div>
       <!--end::Avatar-->
       <!--begin::Username-->
