--- a/one/templates/metronic/users/_user_card.html
+++ b/one/templates/metronic/users/_user_card.html
@@ -3,12 +3,12 @@
 <div class="card mb-5 mb-xl-10">
   <div class="card-body pt-9 pb-0">
     <!--begin::Details-->
-    <div class="d-flex flex-wrap flex-sm-nowrap mb-3">
+    <div class="d-flex flex-wrap flex-sm-nowrap">
       <!--begin: Pic-->
-      <div class="me-7 mb-4">
+      <div class="me-7">
         <div
-          class="symbol symbol-100px symbol-lg-160px symbol-fixed position-relative">
-          <img src="{% static 'media/avatars/150-26.jpg' %}"
+          class="symbol symbol-100px symbol-lg-55px symbol-fixed position-relative">
+          <img src="{% if user.avatar %}{{ user.avatar.url }}{% else %}{% static 'media/svg/avatars/blank.svg' %}{% endif %}"
                alt="image"/>
           <div
             class="position-absolute translate-middle bottom-0 start-100 mb-6 bg-success rounded-circle border border-4 border-white h-20px w-20px"></div>
@@ -19,7 +19,7 @@
       <div class="flex-grow-1">
         <!--begin::Title-->
         <div
-          class="d-flex justify-content-between align-items-start flex-wrap mb-2">
+          class="d-flex justify-content-between align-items-start flex-wrap">
           <!--begin::User-->
           <div class="d-flex flex-column">
             <!--begin::Name-->
@@ -122,13 +122,17 @@
       class="nav nav-stretch nav-line-tabs nav-line-tabs-2x border-transparent fs-5 fw-bolder">
       <!--begin::Nav item-->
       <li class="nav-item mt-2">
-        <a class="nav-link text-active-primary ms-0 me-10 py-5 active"
+        {% url 'users:detail' request.user.username as user_detail_url %}
+        <a class="nav-link text-active-primary ms-0 me-10 py-5
+          {% if user_detail_url in request.path %}active {% else %}{% endif %}"
            href="{% url 'users:detail' request.user.username %}">{% translate 'Overview' %}</a>
       </li>
       <!--end::Nav item-->
       <!--begin::Nav item-->
       <li class="nav-item mt-2">
-        <a class="nav-link text-active-primary ms-0 me-10 py-5"
+        {% url 'users:update' as user_edit_url %}
+        <a class="nav-link text-active-primary ms-0 me-10 py-5
+           {% if user_edit_url in request.path %}active {% else %}{% endif %}"
            href="{% url 'users:update' %}">{% translate 'Settings' %}</a>
       </li>
       <!--end::Nav item-->
